[metadata]
name = cmdcheatsheet
version = 0.0.46
keywords = command, terminal, console, utilities
license = MIT
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Operating System :: Unix
    Operating System :: MacOS
    Topic :: Utilities

[options]
packages = cmdcheatsheet 
install_requires =
    rich

[options.entry_points]
console_scripts =
    cmdcheatsheet = cmdcheatsheet.cmdcheatsheet:main
